# f1-race-intelligence-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/actions/restore-data-seed/: action.yml
.github/workflows/: ci.yml  retrain.yml  seed-data-cache.yml
app/: api.py  config.py  dashboard.py  upcoming_prediction_service.py
app/views/: charts.py  circuit_explorer.py  common.py  compare_drivers.py  components.py  driver_explorer.py  home.py  insights.py  metadata.py  overview.py  predictions.py  race_center.py  season_analytics.py  team.py
artifacts/: features.parquet
artifacts/display/: constructor_standings.csv  driver_standings.csv  qualifying.csv  results.csv
artifacts/display/circuit_layouts/: 10.json  13.json  14.json  17.json  18.json  20.json  21.json  22.json  24.json  3.json  32.json  34.json  39.json  4.json  5.json  68.json  69.json  7.json  70.json  75.json  76.json  77.json  78.json  79.json  9.json
artifacts/serving/staging/: feature_schema.json  manifest.json
artifacts/serving/staging/model/: MLmodel  conda.yaml  model.pkl  requirements.txt
artifacts/tracking/: 2026_running_eval.csv
config/: registered_model_params.json
context/: architecture.md  decisions.md  domain_knowledge.md  project_overview.md
docker/: Dockerfile.api  Dockerfile.dashboard  requirements-api.txt  requirements-dashboard.txt
docs/: api_reference.md  commands.md  pre_race_materialization.md  render_deployment.md  retrain_workflow_setup.md  serving_policy.md  user_guide.md
notebooks/: 01_eda_raw_data.ipynb
reports/: application_design.md  eda_summary.md  master_dataset_design.md  model_comparison.csv  model_development_design.md  model_selection_report.md
reports/phase4_analysis/: feature_importance_logreg.csv  feature_importance_random_forest.csv  permutation_importance_logreg.csv  permutation_importance_random_forest.csv  shap_summary_logreg.csv  shap_summary_random_forest.csv  zoo_timing.csv
scripts/: backfill_circuit_layouts.py  backfill_weather.py  dev.py  export_display_data.py  ingest_jolpica.py  promote_model.py  provision_upcoming_race_data.sh  refresh_and_freeze.py  refresh_features_snapshot.py  render_build.sh  smoke.py
src/data/: build_interim.py  cleaner.py  loader.py  validator.py
src/features/: circuit_history.py  constructor_form.py  driver_form.py  metadata.py  pipeline.py  qualifying.py  standings.py  teammate_form.py  upcoming.py  weather.py  wet_form.py
src/integration/: build_master_dataset.py
src/models/: analysis.py  calibration.py  eras.py  evaluate.py  materialize.py  predict.py  predict_upcoming.py  registry.py  season_tracking.py  serving_bundle.py  splits.py  train.py
src/pipelines/: build_dataset.py
tests/: conftest.py  test_analysis.py  test_api.py  test_backfill_circuit_layouts.py  test_build_interim.py  test_build_master_dataset.py  test_calibration.py  test_cleaner.py  test_eras.py  test_evaluate.py  test_features.py  test_ingest_jolpica.py  test_loader.py  test_materialize.py  test_materialize_golden_row_parity.py  test_materialize_historical_backtest.py  test_pipeline_cli.py  test_predict.py  test_predict_upcoming.py  test_promote_model.py  test_race_center_appTest.py  test_refresh_and_freeze.py  test_refresh_features_snapshot.py  test_registry.py  test_season_tracking.py  test_serving_bundle.py  test_splits.py  test_train.py  test_upcoming.py  test_upcoming_prediction_service.py  test_validator.py  test_views_common.py
tests/_fixtures/: race_center_app.py
