# Packaging (PEP 621) — single source of truth for version, Python floor,
# and dependencies. requirements.txt is a thin installer shim.

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-race-winner-prediction"
version = "1.4.0"
description = "Production-style ML platform predicting F1 race winners from pre-race information"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aditya Joshi", email = "adityajoshi334@gmail.com" }]
# Floor set by the pinned scientific stack (numpy 2.x, pandas 2.3);
# developed and tested on 3.14. setup.py's old ">=3.9" claim was wrong.
requires-python = ">=3.11"

# Runtime: data pipeline, training/analysis, serving, dashboard.
# Compatible-release pins (~=) hold minor versions, allow patches.
dependencies = [
    "pandas~=2.3.3",
    "numpy~=2.4.6",
    "scikit-learn~=1.8.0",
    "scipy~=1.17.1",
    "xgboost~=3.2.0",
    "lightgbm~=4.6.0",
    "shap~=0.51.0",
    "mlflow~=3.12.0",
    "fastapi~=0.136.3",
    "uvicorn~=0.48.0",
    "streamlit~=1.57.0",
    "httpx~=0.28.1",
    "pydantic-settings~=2.14.2",
    "matplotlib~=3.10.9",
    "pyarrow~=23.0.1",
    "plotly~=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.3",
    "pytest-cov~=7.0",
    "ruff~=0.14",
    "notebook>=7.5.6,<7.7.0",
    "pip-audit~=2.10",
]

[project.urls]
Repository = "https://github.com/Aditya5309/f1-race-intelligence-platform"

[tool.setuptools]
# Both src/ (the ML library) and app/ (the serving layer) are installed
# packages. app/ was historically left out on the theory that it's "just"
# a serving-entry directory run from the project root (uvicorn app.api:app
# / streamlit run app/dashboard.py) rather than a library — but that theory
# depends on the launcher adding the project root to sys.path. uvicorn's
# CLI does this itself (--app-dir defaults to the cwd), so `uvicorn
# app.api:app` never depended on app/ being installed. `python -m streamlit
# run app/dashboard.py` only worked locally because `-m` ALSO adds the cwd
# to sys.path before Streamlit's own bootstrap runs (which only adds
# app/dashboard.py's own directory, app/, to sys.path — never its parent).
# Streamlit Community Cloud does not invoke `python -m streamlit`; it drives
# Streamlit's server directly, so that `-m` side effect never happens there,
# and `from app.views import ...` fails with ModuleNotFoundError. Installing
# app/ as a real package removes the dependency on any
# launcher's incidental sys.path behavior, on any platform.
packages = { find = { include = ["src", "src.*", "app", "app.*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Ruff — lint only. The ruff FORMATTER is
# deliberately not adopted: it would churn a reviewed, working codebase.
# Whitespace/alignment (E1/E2) and line length (E5) are likewise off —
# the code uses intentional column alignment and long documented lines.
# Run:  python -m ruff check .
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"   # match requires-python, not the 3.14 dev machine

[tool.ruff.lint]
# Practical baseline: pyflakes (F), pycodestyle errors/warnings (E4/E7/E9, W),
# import sorting (I), bugbear (B), pyupgrade (UP).
select = ["E4", "E7", "E9", "F", "W", "I", "B", "UP"]
ignore = [
    # zip(strict=...): strict=True changes runtime behavior (raises on length
    # mismatch), strict=False is pure churn. Every zip in this codebase pairs
    # equal-length-by-construction sequences.
    "B905",
    # EvaluationObjective(str, Enum) is deliberate: the str
    # mixin keeps MLflow-logged values as plain strings; converting to
    # StrEnum would change str(member) semantics.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
# Tests assert against pandas/NumPy boolean scalars: `is True` fails for
# np.bool_, and bare truthiness would accept any non-empty value —
# explicit `== True` / `== False` is the intended, precise assertion.
"tests/*" = ["E712"]
# test_fan_out_from_duplicate_dimension_key_raises intentionally accepts ANY
# exception: the contract is "raise rather than corrupt the grain"; the
# exact exception type is a pandas implementation detail.
"tests/test_build_master_dataset.py" = ["B017"]
